# sdd-basic-cli-calculator

./: .gitignore  pyproject.toml  readme.md
history/prompts/: MEMORY.md
history/prompts/001-basic-calculator/: 2-create-basic-calculator-specification.spec.prompt.md  3-design-basic-calculator-implementation-plan.plan.prompt.md  4-generate-basic-calculator-implementation-tasks.tasks.prompt.md  5-implement-phase-1-and-phase-2-setup.red.prompt.md  6-implement-phase-3-and-phase-4-user-stories.green.prompt.md  7-implement-phase-5-and-phase-6-error-handling.green.prompt.md  8-implement-phase-7-and-phase-8-polish.refactor.prompt.md
specs/001-basic-calculator/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-basic-calculator/checklists/: requirements.md
specs/001-basic-calculator/contracts/: calculator.md  cli.md
src/: __init__.py  calculator.py  cli.py
tests/: __init__.py
tests/integration/: test_cli.py
tests/unit/: test_calculator.py
