[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sdd-basic-cli-calculator"
version = "0.1.0"
description = "A basic command-line calculator with support for arithmetic operations"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Developer", email = "dev@example.com"}
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
